Update layout styling

--- a/about.html
+++ b/about.html
@@ -23,10 +23,12 @@
 
 <body id="about">
     <header>
-        <div>
-            <img src="img/logov1.svg" alt="Logo" class="logo">
+        <div class="container">
+            <a href="index.html">
+                <img src="img/logov1.svg" alt="Logo" class="logo">
+            </a>
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="about.html#contact">Contact</a></li>
@@ -50,7 +52,7 @@
                     <div class="row"> <!--open row for columns-->
                         <div> <!--open column 1-->
                             <h2 class="center">My Story</h2>
-                            <p>I'm Chelsea! I'm a UX/UI designer based out of NYC aiming to craft solutions to make the
+                            <p class="break">I'm Chelsea! I'm a UX/UI designer based out of NYC aiming to craft solutions to make the
                                 digital world a more inclusive and user-friendly place. My journey into UX design was a bit
                                 unconventional. Originally a medical Speech- Language Pathologist by trade, I discovered the
                                 field of UX design through my experience with a variety of electronic medical record and
