--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" type="text/css"  href="css/styles.css">
 
     <link rel="icon" href="img/favicon/favicon.ico" sizes="any">
@@ -24,7 +24,9 @@
 <body class="index">
     <header class="index">
         <div class="container">
-            <img src="img/logov1.svg" alt="Logo" class="logo">
+            <a href="index.html">
+                <img src="img/logov1.svg" alt="Logo" class="logo">
+            </a>
                 <nav>
                     <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
@@ -1043,11 +1045,11 @@
                         <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile" class="social">
                     </a>
                 </div>
-                <p>Copyright Chelsea Morgan 2023</p>
+                <p>&copy; Copyright Chelsea Morgan 2023</p>
             </div>
         </footer>
     </main>
-        
+    <script src="js/scripts.js"></script>      
 </body>
 
 </html>
