--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,22 +18,28 @@
     <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
     <link rel="manifest" href="img/favicon/site.webmanifest">
+
+	<script src="https://kit.fontawesome.com/5470805870.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="index">
     <header class="index">
         <div class="container">
-            <a href="index.html">
-                <img src="img/logov1.svg" alt="Logo" class="logo">
-            </a>
-                <nav>
-                    <ul class="navigation">
-                        <li><a href="index.html">Work</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-        </div>
+			<div class="navtoggle" id="myNavtoggle"> 
+            	<a href="index.html">
+                	<img src="img/logov1.svg" alt="Logo" class="logo">
+            	</a>
+                	<nav>
+                    	<ul class="navigation">
+                        	<li><a href="index.html">Work</a></li>
+                        	<li><a href="about.html">About</a></li>
+                        	<li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+							<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+                    	</ul>
+                	</nav>
+        	</div>
+		</div>
     </header>
     <main>
         <div id="hero"> <!--open hero section-->
@@ -1049,7 +1054,29 @@
             </div>
         </footer>
     </main>
-    <script src="js/scripts.js"></script>      
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	<script>
+		$(document).ready(function(){
+			
+			$("a").on('click', function(event) {
+		
+				if (this.hash !== "") {
+					event.preventDefault();
+		
+					var hash = this.hash;
+		
+					$('html, body').animate({
+						scrollTop: $(hash).offset().top
+					}, 800, function(){
+				
+						window.location.hash = hash;
+					});
+				} 
+			});
+		});
+		</script>		
+		
+    <script src="js/scripts.js"></script>    
 </body>
 
 </html>
