Add footer/Fix contact link

--- a/mentr.html
+++ b/mentr.html
@@ -34,7 +34,7 @@
                     <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="about.html#contact" onclick="menuToggle()">Contact</a></li>
+                        <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
                         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
                     </ul>
                 </nav>
@@ -736,6 +736,24 @@
             </div>
         </div>
         </div>
+        <footer id="contact">
+            <div class="container">
+                <h2>Contact</h2>
+                <p>Want to discuss collaborations or opportunities? Get in touch!</p> 
+                <p>Phone: <a href="tel:+9089306255">(908) 930-6255</a></p>
+                <p>Prefer Email?</p>
+                <div><!--open email link-->
+                    <a href="mailto:chelsea.morgan704@gmail.com" class="button contact">Email me</a>
+                </div><!--end email link-->
+                <div>
+                    <!--social media layout and placeholders-->
+                    <a href="https://www.linkedin.com/in/chelsea-rabinowitz-b06579100" target="_blank">
+                        <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile" class="social">
+                    </a>
+                </div>
+                <p>&copy; Copyright Chelsea Morgan 2023</p>
+            </div>
+        </footer>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
