Update CSS animation description

--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
                 </div ><!--end first column-->
                 <div class="col-md-6 col-lg-5"> <!--open second column (used for text)-->
                     <h3>CSS Animation</h3>
-                    <p>Lorem ipsum etc.</p>
+                    <p>An example of CSS animation of an SVG image using keyframes.</p>
                 </div><!--end second column-->
             </div><!--end row that holds (2) columns for project-->
             <!--end third project-->    
