update contact section

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                 <div>
                     <h2>Contact</h2>
                     <p>Want to discuss collaborations or opportunities? Get in touch!</p>
-                    <p>Phone: <a href="tel:+9089306255">(908) 930-6255</a></p>
+                    <p>Phone: <a href="tel:+19089306255"> +1 (908) 930-6255</a></p>
                     <p>Prefer Email?</p>
                     <div><!--open email link-->
                         <a href="mailto:chelsea.morgan704@gmail.com" class="button contact">Email me</a>
@@ -118,7 +118,7 @@
                             <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile" class="social">
                         </a>
                     </div>
-                    <p>Copyright Chelsea Morgan 2023</p>
+                    <p>&copy; Copyright Chelsea Morgan 2023</p>
                 </div>
             </footer>
         </div> <!--end all content-->
