--- a/mentr.html
+++ b/mentr.html
@@ -607,8 +607,8 @@
                             </div> <!--end column 1 for text-->
                            <div class="col-md-6 col-lg-6"> <!--open column 2 for img-->
                                <picture>
-                                   <source srcset="img/mentr/rejected_feedback_comment icon@1x.png" media="(max-width:767px)">
-                                   <img src="img/mentr/rejected_feedback_comment icon@2x.png" alt="Picture of forum screen with commnet icon highlighted. User comment about the comment icon says the following. i believe this is a comment icon but i am not 100 percent sure what this is.">
+                                   <source srcset="img/mentr/rejected_feedback_commenticon@1x.png" media="(max-width:767px)">
+                                   <img src="img/mentr/rejected_feedback_commenticon@2x.png" alt="Picture of forum screen with commnet icon highlighted. User comment about the comment icon says the following. i believe this is a comment icon but i am not 100 percent sure what this is.">
                                </picture>
                            </div> <!--end column 2 for img-->
                         </div> <!--end row for 2 columns (2/3)-->
@@ -740,7 +740,7 @@
             <div class="container">
                 <h2>Contact</h2>
                 <p>Want to discuss collaborations or opportunities? Get in touch!</p> 
-                <p>Phone: <a href="tel:+9089306255">(908) 930-6255</a></p>
+                <p>Phone: <a href="tel:+19089306255">+1 (908) 930-6255</a></p>
                 <p>Prefer Email?</p>
                 <div><!--open email link-->
                     <a href="mailto:chelsea.morgan704@gmail.com" class="button contact">Email me</a>
