Fix code via validators

--- a/flame.html
+++ b/flame.html
@@ -325,13 +325,13 @@
 
             <div class="row">
                 <div class="col-lg-6 break">
-                    <video width="500px" height="360px" controls>
+                    <video width="500" height="360" controls>
                         <source src="img/flame/byo_workout.mov" type="video/mp4">
                    </video>
                 </div>
 
                 <div class="col-lg-6">
-                    <video width="500px" height="360px" controls>
+                    <video width="500" height="360" controls>
                         <source src="img/flame/login_explore_exercises.mov" type="video/mp4">
                    </video>
                 </div>
@@ -370,7 +370,7 @@
             <div class="container">
                 <h2>Contact</h2>
                 <p>Want to discuss collaborations or opportunities? Get in touch!</p> 
-                <p>Phone: <a href="tel:+9089306255">(908) 930-6255</a></p>
+                <p>Phone: <a href="tel:+19089306255">+1 (908) 930-6255</a></p>
                 <p>Prefer Email?</p>
                 <div><!--open email link-->
                     <a href="mailto:chelsea.morgan704@gmail.com" class="button contact">Email me</a>
