--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
             <!--start third project-->
             <div class="row"> <!--open row that holds (2) columns for project-->
                 <div class="col-md-6 col-lg-7"> <!--open first column (used for image)-->
-                    <picture>
                         <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<defs>
 								<polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917"></polygon>
@@ -1025,8 +1024,7 @@
 								</path>
 							</g>
 						</svg>
-                    </picture>
-                </div ><!--end first column-->
+                </div><!--end first column-->
                 <div class="col-md-6 col-lg-5"> <!--open second column (used for text)-->
                     <h3>CSS Animation</h3>
                     <p>An example of CSS animation of an SVG image using keyframes.</p>
@@ -1039,7 +1037,7 @@
             <div class="container">
                 <h2>Contact</h2>
                 <p>Want to discuss collaborations or opportunities? Get in touch!</p> 
-                <p>Phone: <a href="tel:+9089306255">(908) 930-6255</a></p>
+                <p>Phone: <a href="tel:+19089306255">+1 (908) 930-6255</a></p>
                 <p>Prefer Email?</p>
                 <div><!--open email link-->
                     <a href="mailto:chelsea.morgan704@gmail.com" class="button contact">Email me</a>
