Add contact form

--- a/about.html
+++ b/about.html
@@ -102,26 +102,27 @@
                             </div> <!--end skills&tools container-->
                         </div> <!--end column 2-->
                     </div> <!--end row for columns-->
-            </div> <!--end about me content container-->
-            <footer id="contact">
-                <div>
-                    <h2>Contact</h2>
-                    <p>Want to discuss collaborations or opportunities? Get in touch!</p>
-                    <p>Phone: <a href="tel:+19089306255"> +1 (908) 930-6255</a></p>
-                    <p>Prefer Email?</p>
-                    <div><!--open email link-->
-                        <a href="mailto:chelsea.morgan704@gmail.com" class="button contact">Email me</a>
-                    </div><!--end email link-->
-                    <div>
-                        <!--social media layout and placeholders-->
-                        <a href="https://www.linkedin.com/in/chelsea-rabinowitz-b06579100" target="_blank">
-                            <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile" class="social">
-                        </a>
-                    </div>
-                    <p>&copy; Copyright Chelsea Morgan 2023</p>
-                </div>
-            </footer>
-        </div> <!--end all content-->
+            </div> 
+        </div><!--end about me content container-->
+        <footer id="contact">
+            <div class="container">
+                <h2>Contact me!</h2>
+                <p>Want to discuss collaborations or opportunities? Get in touch!</p> 
+                <form action="https://formsubmit.co/13d17bd5abb83d624b313829a2b8cd87" method="POST" class="container">
+                    <input type="text" name="Name" placeholder="Full Name" required>
+                    <input type="email" name="Email" placeholder="Email" required>
+                    <textarea name="Message" placeholder="Message" required></textarea>
+                    <button type="submit" class="button contact">Send</button>
+                </form>
+                <p>Phone: <a href="tel:+19089306255">+1 (908) 930-6255</a></p>
+            </div>
+            <div><!--social media layout and placeholders-->
+                <a href="https://www.linkedin.com/in/chelsea-rabinowitz-b06579100" target="_blank">
+                    <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile" class="social">
+                </a>
+            </div>
+                <p>&copy; Copyright Chelsea Morgan 2023</p>
+        </footer>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
