Edit flame case study

--- a/flame.html
+++ b/flame.html
@@ -51,7 +51,7 @@
             <div class="row"> <!--open row for 2 columns-->
                 <div class="col-md-7 col-lg-7"> <!--open column 1 for text-->
                     <h3>Project Overview</h3>
-                    <p> For my UI specialization course through CareerFoundry, I designed a responsive web fitness app, Flame.</p>
+                    <p> In order to build on my skill as a UX designer and really hone my UI skillset, I set out to create a fitness app aimed at making healthy habits engaging and accessible for users of any skill level.</p>
                     <h3>Context</h3>
                     <p>Getting into an exercise routine can be daunting for many people, especially those of us who have no working knowledge of gym equipment or limited fitness know-how. Additionally, finding routines that fit into our jam-packed schedules is tough. Therefore, the goal of Flame is to motivate people of all experience levels to get into a fitness routine customized to their schedule, skills, and interests.</p>
                 </div> <!--end coabout:blank#blockedlumn 1 for text-->
@@ -343,10 +343,14 @@
 
             <div> <!--open learnings and future directions section-->
                 <div>
-                    <h2>Learnings &amp; Future Directions</h2>
+                    <h2>Reflections</h2>
                     <p>Crafting Flame's UI from scratch for this course project has been an incredibly valuable and enriching experience for me, not to mention a lot of fun! As I navigated the delicate balance between visual aesthetics and functionality, I learned how clear communication and engaging visuals come together to shape the overall user experience of a product.</p>
-                    <p>While my knowledge of UX design certainly informed the creation of Flame, given the project's primary focus on UI development, there's an opportunity to more deeply analyze Flame from a UX perspective in the future.</p>
-                    <p>Specifically, I'd like to conduct user testing with Flame to validate the designs and overall concept at the current stage of development. This step will help provide valuable insights, ensuring that the UX and UI work together to create a smooth, satisfying, and widely accessible experience for all users.</p>
+                    <h4>What went well?</h4>
+                    <p>One of the key successes in this project was the creation of a cohesive design system for Flame, which helped to streamline navigation and enhance aesthetic appeal. In doing so, I learned to think and problem-solve in a more visually-oriented way, which has improved my ability to craft intuitive, functional, and visually appealing user interfaces.</p>
+                    <h4>What didn't go so well?</h4>
+                    <p>One of the key challenges I faced throughout this process was managing the project within the given time frame. With a packed schedule between work and outside commitments, I struggled at times to adhere to previously set deadlines, requiring me to play catch-up at various points. However, having now made it through, I've learned first-hand the importance of efficient project management and prioritization when it comes to future projects.</p>
+                    <h4>Future improvements</h4>
+                    <p>Moving forward, I would like to eventually conduct user testing with Flame to validate and refine designs and functionality in accordance with user needs. This step is crucial for identifying usability issues and areas of improvement, ensuring that both the UX and UI of the app work together to create a smooth, satisfying, and widely accessible experience for all users.</p>
                 </div>
 
                 <div>
