--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
                 </div> <!--end first column-->
                 <div class="col-md-6 col-lg-5"> <!--open second column (used for text)-->
                     <h3>Mentr</h3>
+					<h4>UX Immersion Course Project</h4>
                     <p>Mentr is a responsive web-app that connects users with trusted experts across any field, at any time,
                         from anywhere to offer trustworthy advice and real-time insights. This project showcases my UX design
                         process from start to finish all the way from initial research, through wireframing, testing, and ending
                         with the final prototype.</p>
+					<p>Skills used: Competitor analysis, User research, User stories and personas, User flows, Sitemapping/Information Architechture, Wireframing, Prototyping, Responsive design, UI design</p>
                     <a href="mentr.html" class="button">Read more</a>
                 </div> <!--end second column-->
             </div> <!--end row that holds (2) columns for project-->
@@ -82,13 +84,33 @@
                 </div ><!--end first column-->
                 <div class="col-md-6 col-lg-5"> <!--open second column (used for text)-->
                     <h3>Flame</h3>
+					<h4>UI for UX Designers Course Project</h4>
                     <p>Flame is a responsive web-app for users of any ability or experience level looking to get into an exercise routine that fits with their current schedule. This project more heavily focuses on the visual design of the product in order to demonstrate my UI design skills and process, all through the wider lens of a UX background.</p>
+					<p>Skills used: Style guides, Mood boards, Wireframing, Prototyping, Animation, Branding, User flows</p>
                     <a href="flame.html" class="button">Read more</a>
                 </div><!--end second column-->
             </div><!--end row that holds (2) columns for project-->
             <!--end second project-->
+
+			 <!--start third project-->
+			 <div class="row"> <!--open row that holds (2) columns for project-->
+                <div class="col-md-6 col-lg-7"> <!--open first column (used for image)-->
+                    <picture>
+                        <source srcset="img/portfolio/portfolio_hero@1x.png" media="(max-width:767px)">
+                        <img src="img/portfolio/portfolio_hero@2x.png" alt="Portfolio site hero image">
+                    </picture>
+                </div ><!--end first column-->
+                <div class="col-md-6 col-lg-5"> <!--open second column (used for text)-->
+                    <h3>Portfolio Site</h3>
+					<h4>Frontend Development for Designers Course Project</h4>
+                    <p>Discover how I learned to code this very website from scratch to showcawse my work!</p>
+					<p>Skills used: HTML, CSS, JavaScript, Cross-browser testing, Debugging, Github collaboration, DOM traversing, CSS transitions and animation, Responsive layouts, Usability testing</p>
+                    <a href="files/portfolio_case_study.pdf" target="_blank" class="button">Download the Case Study</a>
+                </div><!--end second column-->
+            </div><!--end row that holds (2) columns for project-->
+            <!--end third project-->
             
-            <!--start third project-->
+            <!--start fourth project-->
             <div class="row"> <!--open row that holds (2) columns for project-->
                 <div class="col-md-6 col-lg-7"> <!--open first column (used for image)-->
                         <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -1030,7 +1052,7 @@
                     <p>An example of CSS animation of an SVG image using keyframes.</p>
                 </div><!--end second column-->
             </div><!--end row that holds (2) columns for project-->
-            <!--end third project-->    
+            <!--end fourth project-->    
         </div><!--end work section-->
 
         <footer id="contact">
